--- a/notebooks/pdfparser.ipynb
+++ b/notebooks/pdfparser.ipynb
@@ -567,22 +567,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "string.punctuation"
+    "pyLDAvis.save_html(vis, 'PrelimTopicModel.html')"
    ]
   }
  ],
