creating the code to find the exemplary document for each type

--- a/notebooks/pdfparser.ipynb
+++ b/notebooks/pdfparser.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Pull in all of the PDF files and create objects for the text inside each one. \n",
     "\n",
-    "This also probably should include a spell check"
+    "This also probably should include a spell check\n",
+    "\n",
+    "[One of the sources I am using for the topic modeling](https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/)"
    ]
   },
   {
@@ -572,6 +574,368 @@
    "outputs": [],
    "source": [
     "pyLDAvis.save_html(vis, 'PrelimTopicModel.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find the Dominant Document For Each Topic \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this creates a pandas DataFrame that orders all of the topics and shows the dominant topic for each document\n",
+    "def format_topics_sent(ldamodel, corpus, texts):\n",
+    "    sent_topics_df = pd.DataFrame()\n",
+    "    for i, row in enumerate(ldamodel[corpus]):\n",
+    "        row = sorted(row[0], key=lambda x: x[1], reverse=True)\n",
+    "        \n",
+    "        for j, (topic_num, prop_topic) in enumerate(row):\n",
+    "            if j == 0:\n",
+    "                wp = ldamodel.show_topic(topic_num)\n",
+    "                topic_keywords = \", \".join([word for word, prop in wp])\n",
+    "                sent_topics_df = sent_topics_df.append(pd.Series([int(topic_num), round(prop_topic,4), topic_keywords]), ignore_index=True)\n",
+    "            else:\n",
+    "                break\n",
+    "    sent_topics_df.columns = ['Dominant_topic', 'Perc_Contrib', 'Topic_Keywords']\n",
+    "    contents = pd.Series(texts)\n",
+    "    sent_topics_df = pd.concat([sent_topics_df, contents], axis=1)\n",
+    "    return sent_topics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent_topics_df = format_topics_sent(lda_model, corpus, text_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x118f5cad0>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grpd_df = sent_topics_df.groupby('Dominant_topic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Topic_Num</th>\n",
+       "      <th>Topic_Perc_Contrib</th>\n",
+       "      <th>Keywords</th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5008</td>\n",
+       "      <td>migration, context, migrant, study, experience...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.3923</td>\n",
+       "      <td>immigrant, american, case, service, sense, gro...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.5300</td>\n",
+       "      <td>new, ed, press, york, study, mission, book, ch...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.7007</td>\n",
+       "      <td>–, people, religion, dhs, order, come, life, e...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Index.pdf, 2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.4219</td>\n",
+       "      <td>’, s, god, experience, e, challenge, g, cruz, ...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Chapter Four. Exploring...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.3031</td>\n",
+       "      <td>economic, family, home, role, migration, er, t...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.8080</td>\n",
+       "      <td>nagy, dorottya, frederiks, martha, christian, ...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.4001</td>\n",
+       "      <td>right, power, human, political, world, come, s...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.4924</td>\n",
+       "      <td>religion, identity, religious, culture, cultur...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Chapter Six. Expanding ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.3283</td>\n",
+       "      <td>struggle, filipino, philippine, eology, book, ...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Preliminary Material.pd...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.8040</td>\n",
+       "      <td>eology, e, feminist, cruz, tulud, g, woman, po...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Preliminary Material.pd...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.8343</td>\n",
+       "      <td>dhs, hong, kong, ’, filipino, hk, domestic, wo...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Chapter One. Geographie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.4643</td>\n",
+       "      <td>church, christian, role, context, american, ti...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.8412</td>\n",
+       "      <td>”, “, ’, –, vol, e, dhs, s, tulud, cruz</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Chapter One. Geographie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.5705</td>\n",
+       "      <td>migrant, worker, country, domestic, work, soci...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.4450</td>\n",
+       "      <td>people, place, fact, example, make, situation,...</td>\n",
+       "      <td>(../pdfs/Izuzquiza - 2011 - Breaking bread not...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.4085</td>\n",
+       "      <td>work, study, form, relation, place, question, ...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.6731</td>\n",
+       "      <td>life, god, word, people, way, mean, reality, t...</td>\n",
+       "      <td>(../pdfs/Izuzquiza - 2011 - Breaking bread not...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.5667</td>\n",
+       "      <td>woman, ’, s, experience, particularly, oppress...</td>\n",
+       "      <td>(../pdfs/Cruz - 2010 - Chapter Four. Exploring...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.5590</td>\n",
+       "      <td>community, group, religious, migrant, faith, c...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.4630</td>\n",
+       "      <td>theology, theological, context, way, new, ques...</td>\n",
+       "      <td>(../pdfs/Frederiks and Nagy - 2016 - Religion,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.4607</td>\n",
+       "      <td>social, cultural, political, society, reality,...</td>\n",
+       "      <td>(../pdfs/Izuzquiza - 2011 - Breaking bread not...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.9262</td>\n",
+       "      <td>d, c, come, dhs, life, order, case, like, hk, ...</td>\n",
+       "      <td>(../pdfs/Gods People on the Move 2.pdf, 14)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Topic_Num  Topic_Perc_Contrib  \\\n",
+       "0         0.0              0.5008   \n",
+       "1         1.0              0.3923   \n",
+       "2         2.0              0.5300   \n",
+       "3         3.0              0.7007   \n",
+       "4         4.0              0.4219   \n",
+       "5         5.0              0.3031   \n",
+       "6         6.0              0.8080   \n",
+       "7         7.0              0.4001   \n",
+       "8         8.0              0.4924   \n",
+       "9         9.0              0.3283   \n",
+       "10       10.0              0.8040   \n",
+       "11       11.0              0.8343   \n",
+       "12       12.0              0.4643   \n",
+       "13       13.0              0.8412   \n",
+       "14       14.0              0.5705   \n",
+       "15       15.0              0.4450   \n",
+       "16       17.0              0.4085   \n",
+       "17       18.0              0.6731   \n",
+       "18       19.0              0.5667   \n",
+       "19       20.0              0.5590   \n",
+       "20       21.0              0.4630   \n",
+       "21       22.0              0.4607   \n",
+       "22       24.0              0.9262   \n",
+       "\n",
+       "                                             Keywords  \\\n",
+       "0   migration, context, migrant, study, experience...   \n",
+       "1   immigrant, american, case, service, sense, gro...   \n",
+       "2   new, ed, press, york, study, mission, book, ch...   \n",
+       "3   –, people, religion, dhs, order, come, life, e...   \n",
+       "4   ’, s, god, experience, e, challenge, g, cruz, ...   \n",
+       "5   economic, family, home, role, migration, er, t...   \n",
+       "6   nagy, dorottya, frederiks, martha, christian, ...   \n",
+       "7   right, power, human, political, world, come, s...   \n",
+       "8   religion, identity, religious, culture, cultur...   \n",
+       "9   struggle, filipino, philippine, eology, book, ...   \n",
+       "10  eology, e, feminist, cruz, tulud, g, woman, po...   \n",
+       "11  dhs, hong, kong, ’, filipino, hk, domestic, wo...   \n",
+       "12  church, christian, role, context, american, ti...   \n",
+       "13            ”, “, ’, –, vol, e, dhs, s, tulud, cruz   \n",
+       "14  migrant, worker, country, domestic, work, soci...   \n",
+       "15  people, place, fact, example, make, situation,...   \n",
+       "16  work, study, form, relation, place, question, ...   \n",
+       "17  life, god, word, people, way, mean, reality, t...   \n",
+       "18  woman, ’, s, experience, particularly, oppress...   \n",
+       "19  community, group, religious, migrant, faith, c...   \n",
+       "20  theology, theological, context, way, new, ques...   \n",
+       "21  social, cultural, political, society, reality,...   \n",
+       "22  d, c, come, dhs, life, order, case, like, hk, ...   \n",
+       "\n",
+       "                                                 Text  \n",
+       "0   (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "1   (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "2   (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "3                (../pdfs/Cruz - 2010 - Index.pdf, 2)  \n",
+       "4   (../pdfs/Cruz - 2010 - Chapter Four. Exploring...  \n",
+       "5   (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "6   (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "7   (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "8   (../pdfs/Cruz - 2010 - Chapter Six. Expanding ...  \n",
+       "9   (../pdfs/Cruz - 2010 - Preliminary Material.pd...  \n",
+       "10  (../pdfs/Cruz - 2010 - Preliminary Material.pd...  \n",
+       "11  (../pdfs/Cruz - 2010 - Chapter One. Geographie...  \n",
+       "12  (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "13  (../pdfs/Cruz - 2010 - Chapter One. Geographie...  \n",
+       "14  (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "15  (../pdfs/Izuzquiza - 2011 - Breaking bread not...  \n",
+       "16  (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "17  (../pdfs/Izuzquiza - 2011 - Breaking bread not...  \n",
+       "18  (../pdfs/Cruz - 2010 - Chapter Four. Exploring...  \n",
+       "19  (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "20  (../pdfs/Frederiks and Nagy - 2016 - Religion,...  \n",
+       "21  (../pdfs/Izuzquiza - 2011 - Breaking bread not...  \n",
+       "22        (../pdfs/Gods People on the Move 2.pdf, 14)  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This code creates a pandas DataFrame that shows which document is exemplified by which topic\n",
+    "sent_topics_df = pd.DataFrame()\n",
+    "\n",
+    "for i, grp in grpd_df:\n",
+    "    sent_topics_df = pd.concat([sent_topics_df, grp.sort_values(['Perc_Contrib'], ascending=[0]).head(1)], axis=0)\n",
+    "\n",
+    "sent_topics_df.reset_index(drop=True, inplace=True)\n",
+    "sent_topics_df.columns = ['Topic_Num', 'Topic_Perc_Contrib', 'Keywords', 'Text']\n",
+    "sent_topics_df"
    ]
   }
  ],
