adding reference for lemmatizer

--- a/notebooks/pdfparser.ipynb
+++ b/notebooks/pdfparser.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "This also probably should include a spell check\n",
     "\n",
-    "[One of the sources I am using for the topic modeling](https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/)"
+    "[One of the sources I am using for the topic modeling](https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/)\n",
+    "[This is a good post on Lemmatizing in python](https://www.machinelearningplus.com/nlp/lemmatization-examples-python/)"
    ]
   },
   {
