making changes to create topic models

--- a/notebooks/create_topic_models.ipynb
+++ b/notebooks/create_topic_models.ipynb
@@ -97,6 +97,7 @@
     "    words = nltk.word_tokenize(text)\n",
     "    for w in words:\n",
     "        if w not in STOPWORDS and len(w) > 2: # removing two character words\n",
+    "            # The Translator should have been placed before the if test\n",
     "            w = w.translate(PUNCDIG_TRANSLATOR)\n",
     "            if w != '':\n",
     "                clean_list.append(lemmatizer.lemmatize(w))\n",
