updating readme, and finalizing notebooks

--- a/notebooks/exploring_hathi_trust.ipynb
+++ b/notebooks/exploring_hathi_trust.ipynb
@@ -1322,7 +1322,7 @@
    "outputs": [],
    "source": [
     "import cProfile \n",
-    "cProfile.run('file_parser(fr, corpus_dict {}, lda_model)')"
+    "cProfile.run('file_parser(fr, corpus_dict, {}, lda_model)')"
    ]
   },
   {
@@ -1333,11 +1333,6 @@
    "source": [
     "timeit.timeit(wrapped, number=1)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
